--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,8 +1,7 @@
-version: '3'
+version: "3"
 
 services:
   guesterz.front:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-    ports:
-      - "80"
+
